--- a/_posts/2014-08-15-vim命令汇总.md
+++ b/_posts/2014-08-15-vim命令汇总.md
@@ -20,6 +20,13 @@ n==   n行缩进
 
 .     重复刚才的命令
 z+f % 折叠代码
+
+o     插入一个空行
+CTRL+v, I, #, ESC    多行注释（#可以换成其他的，例如//）
+      删除多行注释的方法，同样 Ctrl+v 进入列选择模式，移到光标把注释符选中，按下d，注释就被删除了
+
 ```
+
+
 
 
